--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
             </div>
         </div>
+        <div>
+            
+        </div>
     </div>
 
     <footer class="footer">
